--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -5,7 +5,7 @@
         </div>
         <div class="dropmenuholder">
           <ul class="dropmenu">
-            <li class="first"><a href="#">LOCATIONS</a>
+            <li class="first"><a href="">LOCATIONS</a>
               <ul>
                 <% MAPS[:world][:regions].each do |region, region_attr| %>
                   <% region_attr[:countries].each do |country, country_attr| %>
@@ -27,7 +27,7 @@
           </ul>
           <!-- ... and so on ... -->
           <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" %>">
-            <li class="first"><a href="#">PROJECTS</a>
+            <li class="first"><a href="#" onclick="wb.toggleSector(); return false">PROJECTS</a>
               <ul>
                 <li><a href="#">Number by Department</a></li>
                 <li><a href="#">Number by Commune</a></li>
@@ -37,7 +37,7 @@
           </ul>
           <!-- ... and so on ... -->
           <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" %>">
-            <li><a href="#">RESULTS</a>
+            <li><a href="">RESULTS</a>
               <ul>
                 <li><a href="#">Country Profile</a></li>
                 <li><a href="#">Project Profile</a></li>
