--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -12,6 +12,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/style.css">
   <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css">
   <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css">
+                                                           
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css">
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css">
 
@@ -25,8 +26,11 @@
   <script type="text/javascript" src="/js/effects.js"></script>
   <script type="text/javascript" src="/js/search_box.js"></script>
 
+<script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/prototype.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.3.2.min.js"></script>
-
+<script type="text/javascript" charset="utf-8">
+var jq = jQuery.noConflict();
+</script>
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
 <% if PLATFORM_API_URL =~ /geocommons/ %>
@@ -63,7 +67,7 @@
         <li class="more"><a href="http://web.worldbank.org/WBSITE/EXTERNAL/0,,contentMDK:20130470%7EpagePK:50016803%7EpiPK:50016805%7EtheSitePK:13,00.html">View more</a></li>
       </ul>
     </div>    
-    <span id="header"><a href="http://www.worldbank.org/"> <img src="/wbimages/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
+    <span id="header"><a href="http://www.worldbank.org/"> <img src="/images/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
     <%= partial :search %>
     <div id="network">
       <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
