Sector Pie chart

--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -103,7 +103,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       if(sector == null) {
         self.map.showLayer(self.stylelayers["Project Locations"].order, "false");        
       }
-      //self.sectorPieChart(sector);
+      self.sectorPieChart(sector);
     },
     setIndicator: function(indicator,visible) {
       var self = this;
