--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -9,8 +9,8 @@
           <p id="activity_count"><%= @country[:name] == "World" ? "12,000" : "&nbsp;&nbsp;&nbsp;&nbsp;" %></p>
         </div>
         <div class="console-info">
-          <p>active projects</p>
-          <p>project locations mapped</p>
+          <p title="Active projects as of June 30, 2010">active projects</p>
+          <p title="Project locations as of June 30, 2010">project locations mapped</p>
         </div>    
         <%= partial :layer_controls %>
   </div>
