--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -5,7 +5,7 @@
 
   <link href="<%= PLATFORM_API_URL %>/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
-  <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/sites/default/files/climatechange_favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="<%= PLATFORM_API_URL %>/favicon.png" type="image/x-icon">
   
   <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css">
   <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css">
