--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -1,8 +1,8 @@
     <div id="container">
       <div id="banner">
-        <h1 id="banner-header">
+        <h1 id="banner-header" title="Click to hide the overview information">
           <div class="collapsible-header expanded" content_id="collapsible-banner" >
-            <div class="banner-open-image"></div>
+            <div title="More information about Mapping for Results" class="banner-open-image"></div>
           </div>
         </h1>
         
@@ -13,12 +13,12 @@
                 <div class="overview-links">
                   <p>Overview »</p>
                   <ul>
-                    <li><a href="#context">Context</a></li>
-                    <li><a href="#strategy">Strategy</a></li>
-                    <li><a href="#results">Results</a></li>
+                    <li><a href="/about#context">Context</a></li>
+                    <li><a href="/about#strategy">Strategy</a></li>
+                    <li><a href="/about#results">Feedback</a></li>
                   </ul>
                 </div>
-                <div class="overview-text"><strong>The Mapping for Results Beta</strong> initiative provides detailed information on our efforts to reduce poverty and alleviate human suffering in every part of the world. This website showcases information on the what and where by accessing the indicator, sector, region, and funding dropdown and toggle areas. <a class="readmore" href="#">Read More »</a></div>
+                <div class="overview-text"><strong>The Mapping for Results Beta</strong> initiative provides detailed information on our efforts to reduce poverty and alleviate human suffering in every part of the world. This website showcases information on the what and where by accessing the indicator, sector, region, and funding dropdown and toggle areas. <a class="readmore" href="/about">Read More »</a></div>
               </div>
             </div>
           </div>
