--- a/m4r/views/projects_table.erb
+++ b/m4r/views/projects_table.erb
@@ -11,6 +11,7 @@
     <div id="projects-table" style="width:960px; float:left">
     </div>
     <!--Data Table Ends-->
+    <% if false %>
     <div id="page-scroll">
       <div id="pagination">
         <ul>
@@ -25,3 +26,4 @@
         </ul>
       </div>
     </div>
+    <% end %>
