--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -1,17 +1,17 @@
 
   <script type="text/javascript">
   jq(function() {
-        jq('#sector1').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector2').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector3').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector4').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector5').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector6').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector7').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector8').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector9').tipsy({gravity:  jq.fn.tipsy.autoNS});
-        jq('#sector10').tipsy({gravity: jq.fn.tipsy.autoNS});
-        jq('#sector11').tipsy({gravity: jq.fn.tipsy.autoNS});
+        jq('.s1').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s2').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s3').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s4').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s5').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s6').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s7').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s8').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s9').tipsy({gravity:  jq.fn.tipsy.autoNS});
+        jq('.s10').tipsy({gravity: jq.fn.tipsy.autoNS});
+        jq('.s11').tipsy({gravity: jq.fn.tipsy.autoNS});
   });
   </script>
 
