--- a/m4r/views/footer.erb
+++ b/m4r/views/footer.erb
@@ -3,7 +3,7 @@
     <div id="network-breadcrumb">
       <div class="limiter"> <span class="breadcrumb-link"><a class="breadcrumb-link-home">You are here</a></span>
         <span class="breadcrumb-link breadcrumb-first"><a href="http://data.worldbank.org/">Map</a></span>
-        <%= map_link(@country) %>
+        <%= map_link(@country) unless @country.nil? %>
         </div>
     </div>
     <!--Grey Footer Begins-->
